2000-09-26  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* peigen.c (_bfd_pei_swap_aouthdr_in): If some DataDirectory
	is empty, make sure that its rva also 0. NT loader dislikes
	having otherwise.

2000-09-26  Steve Ellcey <sje@cup.hp.com>

	* som.c (som_bfd_derive_misc_symbol_info): Make weak symbols
	global by default.

2000-09-21  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c (elf32_hppa_check_relocs): Fix weak sym handling in
	currently unused RELATIVE_DYNAMIC_RELOCS code.
	(hppa_discard_copies): Likewise.
	(elf32_hppa_size_stubs): Size `input_list' array correctly.  Correct
	comments.  Don't check non-code output sections for stub grouping.

2000-09-20  Alan Modra  <alan@linuxcare.com.au>

	* section.c (bfd_get_unique_section_name): Return NULL if
	bfd_malloc fails.

2000-09-19  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* elf32-m68k.c (elf_cpu32_plt0_entry): Change the PLT entry 0
	instruction sequence to actually work.
	(elf_m68k_finish_dynamic_sections): Change the patch-in offset
	accordingly.

2000-09-18  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-sh.c (sh_elf_relocate_section): Use
	_bfd_final_link_relocate to apply the relocation against a section
	symbol, when doing relocatable links.

2000-09-18  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c (elf32_hppa_stub_hash_entry): Rename input_section
	to id_sec.
	(stub_hash_newfunc): Here too.
	(hppa_add_stub): And here.
	(elf32_hppa_link_hash_table): Remove stub_section_created,
	reloc_section_created, first_init_sec and first_fini_sec.  Add
	stub_group.
	(elf32_hppa_link_hash_table_create): Init to suit.
	(hppa_get_stub_entry): Add support for grouping stub sections.
	(hppa_add_stub): Likewise.  Remove sec_count param and init/fini
	section code.  Index stub vars by section->id.
	(elf32_hppa_size_stubs): Likewise.  Remove duplicated function
	exit paths.  Zap allocation of above removed vars.  Refine
	link-once test.
